--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<h2 id="welcome-to-github-pages">You are experiencing this page on GitHub</h2>
 	<p>The link to my Github repo <a href="https://github.com/icartadmin">github.com/icartadmin</a> where you can find more details about this project and the associated code.</p>
 <footer class="site-footer">
-	<span class="site-footer-credits">All rights reserved. Please contact developer for any queries, feedback or suggestions <a href="https://akdesigns.ooo">AK Designs</a>.</span>
+	<span class="site-footer-credits">All rights reserved. Please contact developer for any queries, feedback or suggestions <a href="https://ak-designs.appspot.com">AK Designs</a>.</span>
 </footer>
 </section>
 </body>
