--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!Doctype html>
 <html>
 <head>
+<title>The immersive shopping experience that every shopper loves to have</title>
+<link rel="icon" type="image/c-icon" href="AK_Logo.png"/>
 <link href="styles.css" rel="stylesheet">
 </head>
 <body>
