Title and Logo Modification to the correct one

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>The immersive shopping experience that every shopper loves to have</title>
-<link rel="icon" type="image/c-icon" href="AK_Logo.png"/>
+<link rel="icon" type="image/c-icon" href="shoppingbag.png"/>
 <link href="styles.css" rel="stylesheet">
 </head>
 <body>
